# Plex-Management

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  init.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard-env.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  promote.yml  security.yml
docker/: entrypoint.sh
docs/adr/: 0001-integrated-app-borrowed-brains.md  0002-python-typed-stack.md  0003-docker-ghcr-packaging.md  0004-edge-stable-release-channels.md  0005-zero-terminal-web-operability.md  0006-download-client-port-qbittorrent.md  0007-sqlite-alembic-migrations.md  0008-release-parser-guessit.md  0009-frontend-typed-spa.md  0010-import-pipeline-honest-availability.md  0011-tv-season-episode-support.md  0012-operability-health-logs-eviction.md  0013-auto-grab-worker.md  0014-correction-verbs.md  0015-anime-library-routing.md  0016-plex-oauth-owner-sessions.md  0017-origin-confined-service-urls.md  0017-plex-video-download-validation.md  0017-realtime-sse-invalidations-over-polling-floor.md  0018-episode-level-fallback-whole-season.md  0018-origin-confined-service-urls.md  0019-realtime-sse-invalidations-over-polling-floor.md  0020-episode-level-fallback-whole-season.md  0021-database-rollback-and-pre-migration-backup.md  0021-plex-watchlist-request-automation.md  0021-trusted-host-setup-hardening.md  0022-claim-before-purge-correction-order.md  0023-database-rollback-and-pre-migration-backup.md  0023-first-party-container-auto-updater.md  0024-first-party-container-auto-updater.md  0025-updater-sidecar-self-recreation-lifecycle.md  0026-redact-at-rotation-historical-log-secrets.md  README.md
docs/api/: openapi.json
docs/design/: alpha-plan.md  beta-plan.md  frontend-alpha-plan.md  operability-beta-plan.md  overview.md  tv-beta-plan.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: fonts.ts  main.tsx  router.tsx
migrations/: env.py
migrations/versions/: 088a027cb4ec_auto_grab_search_attempts_next_search_.py  1b661e856ac1_add_media_requests_available_heal_.py  26bc01829ae1_add_stalled_download_history_event_type.py  26d44ca5f471_eviction_regrab_provenance_marker.py  309cbf9239c3_initial_schema.py  3d28d05107aa_add_season_requests_airing_refresh_.py  41d427bd38e6_add_import_blocked_request_status.py  45f1f9145e95_add_download_coverage_claims_for_ride_.py  4ea46e54d51c_add_season_episode_states_table.py  516a74ff0b40_add_watchlist_items_tmdb_media_index.py  5e8b1a4f2c9d_tv_download_scopes_waiting.py  6c7fca1436d8_operability_log_events_library_path_.py  7bcbce2c2e2b_plex_oauth_sessions.py  7f4a2c91d8e3_add_request_subscribers.py  88bcf173ab91_add_request_dedup_locks.py  9b7a1c5d2e4f_tv_request_intent.py  9db7096d4e6c_widen_update_coordinator_digest_and_.py  a1f3c9d5e2b7_recovery_session_nullable_user_id.py  a2c4e6f8b0d1_container_update_coordination.py  a9c31e72b4f6_add_watchlist_items.py  b7e2d4f6c8a1_add_enum_checks_and_drop_blocklist_title_index.py  bfaa63130ee7_add_download_release_title_column.py  c26d3f8a9b41_merge_operability_and_hardening_heads.py  c86212dad733_add_blocklist_tmdb_id_media_type_index.py  d3a7077fdbcc_tv_season_support.py  e91b3f7a5d24_add_request_subscribers_user_request_index.py  ec826d3aa951_sidecar_identity_and_refresh_.py  f679b4c17194_add_request_poster_backdrop_art_columns.py
requirements/: runtime-constraints.txt
src/plex_manager/: __init__.py  __main__.py  config.py  db.py  db_backup.py  headersafe.py  logsafe.py  models.py
tests/: support.py  test_changelog.py  test_config.py  test_db_backup.py  test_entrypoint.py  test_headersafe.py  test_health.py  test_logsafe.py  test_main.py  test_promote_workflow.py  test_version.py
tests/adapters/: test_service_url.py
tests/domain/: test_blocklist.py  test_decision_engine.py  test_decision_engine_episode_fallback.py  test_disk_usage.py  test_domain_purity.py  test_download_payload.py  test_events.py  test_eviction.py  test_failure_classification.py  test_import_validation.py  test_media_match.py  test_naming.py  test_plex_video.py  test_quality.py  test_quality_profile.py  test_quality_service.py  test_reconciler.py  test_release.py  test_season_completeness.py  test_season_pack.py  test_season_rollup.py  test_source_mapping.py  test_state_machine.py  test_update_recovery.py  test_update_schedule.py
tests/persistence/: conftest.py  test_blocklist_repository.py  test_database_url.py  test_download_repository.py  test_encryption.py  test_encryption_keyfile.py  test_fk_enforcement.py  test_migrations.py  (+9 more)
(+338 files in other folders)
