[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-manager"
description = "Self-hosted, unified media-request and automation service for Plex."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "LunchBox951", email = "95397613+LunchBox951@users.noreply.github.com " }]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "httpx>=0.27",
    # Release-name parser (borrowed brains, ADR-0008). Pinned exactly: the
    # parse output drives the safety-critical CAM/TS hard cutoff, so a silent
    # upgrade must never shift classification (golden tests guard it too).
    "guessit==4.0.2",
    # Fernet encryption for secrets at rest (ADR-0005).
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    # Gate tools are pinned exactly so pre-commit, local, and CI never drift
    # (bump deliberately; Dependabot's pip ecosystem proposes updates).
    "ruff==0.15.20",
    "pyright==1.1.411",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
plex-manager = "plex_manager.__main__:main"

[tool.hatch.version]
path = "src/plex_manager/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plex_manager"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "S",             # flake8-bandit (security)
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in tests

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "migrations"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# Tests interact with loosely-typed third-party test clients; keep real type
# errors flagged but tolerate the unknowns those libraries surface.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=plex_manager --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["plex_manager"]
